fix inivisible table header

--- a/frontend/src/app/+organizer/profile-schedule.component.scss
+++ b/frontend/src/app/+organizer/profile-schedule.component.scss
@@ -2,6 +2,12 @@
 .fill-height {
     overflow-x: hidden;
 }
+.col-md-4 {
+    text-align: center;
+}
+h3 {
+    color: #1b1b1b;
+}
 .line-break {
     border-bottom: 1px solid #1b1b1b;
     padding: 0 10px;
